# dbal

./: .env.example  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
data/: usage_data.csv
docs/: csv_ingestion.md  explanations.md  fx_rates.md  requirements.md  task1_database_service.md  task2_csv_ingestion.md  task3_fx_rates.md  task4_production_behavior.md
fx/: store.py
ingestion/: csv_ingest.py  schema.py
scripts/: fetch_rates.py  ingest_csv.py
src/dbal/: __init__.py  postgres_service.py  service.py  sqlite_service.py
src/dbal/task1_database/: __init__.py  postgres_service.py  service.py  sqlite_service.py  types.py
src/dbal/task2_ingestion/: __init__.py  csv_ingest.py
src/dbal/task3_fx/: __init__.py  client.py  store.py
tests/: conftest.py  test_e2e_postgres.py  test_fx.py  test_ingestion.py  test_task1_database.py  test_task2_ingestion.py  test_task3_fx.py
